Add alertas and locais seguros
